--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
         "prettier/react"
     ],
     "rules": {
+        "no-unused-expressions": 0,
+        "no-nested-ternary": 0,
         "guard-for-in": 0,
         "no-restricted-syntax": 0,
         "max-len": ["error", {
